# ai_behavior

./: Cargo.toml  LICENSE  README.md
src/: behavior.rs  lib.rs  state.rs
tests/: test_events.rs  tests.rs
