[package]
name = "ai_behavior"
version = "0.1.0"
edition = "2018"
authors = [
    "Logan Benjamin <logan.benjamin@hotmail.com>",
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
]
keywords = ["ai", "behavior", "game", "logic"]
description = "AI behavior tree"
license = "MIT"
readme = "README.md"
repository = "https://github.com/loganbenjamin/ai_behavior.git"
homepage = "https://github.com/loganbenjamin/ai_behavior"
autotests = false

[lib]
name = "ai_behavior"

[dependencies]
serde_derive = "1.0"
serde = "1.0"

[[test]]
name = "tests"
